Mejoras al codigo del backend