@@ -1,12 +1,12 @@
 package com.grupocinco.app.services;
 
 import com.grupocinco.app.dtos.PersonaDTO;
+import com.grupocinco.app.mappers.PersonaMapper;
 import com.grupocinco.app.repository.RepositorioDePersonal;
 import com.grupocinco.domain.Persona;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class ServicioPersonal {
@@ -18,6 +18,6 @@ public class ServicioPersonal {
 
     public List<PersonaDTO> listarPersonal() {
         List<Persona> personal = dbPersonal.findAll();
-        return personal.stream().map(PersonaDTO::aDTO).collect(Collectors.toList());
+        return personal.stream().map(PersonaMapper::aDTO).toList();
     }
 }
